# hr-assistant

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
docs/: architecture.md
hr_assistant/: __init__.py  agents.py  callbacks.py  config.py  data_store.py  evaluator.py  memory.py  prompts.py  rag.py  tools.py
hr_assistant/ui/: __init__.py  candidate_portal.py  employee_portal.py  hr_portal.py  login.py  styles.py
tests/: test_callbacks.py  test_data_store.py  test_evaluator.py  test_memory.py
